Ensure tooltip is visible when used within modal

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -19,6 +19,12 @@ input {
   overflow: visible;
 }
 
+/* reach ui 
+============================================================================ */
+[data-reach-tooltip] {
+  z-index: 99999999 !important;
+}
+
 /*  Utilities
 ============================================================================ */
 .truncate {
